crates/shipper-cli/tests/snapshots/e2e_expanded__publish_invalid_manifest_content.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: "normalize_stderr(&stderr.replace(td.path().to_str().unwrap(),\n\"<TMPDIR>\").replace(&td.path().to_str().unwrap().replace('\\\\', \"/\"),\n\"<TMPDIR>\",),)"
---
Error: failed to execute cargo metadata

Caused by:
    `cargo metadata` exited with an error: error: key with no value, expected `=`
     --> <TMPDIR>\Cargo.toml:1:6
      |
    1 | this is not valid toml {{{{
      |      ^
